--- a/quiz/quiz1_basichtml5.html
+++ b/quiz/quiz1_basichtml5.html
@@ -1,1 +1,26 @@
+<head>
+  <title>Jacob Insco - Quiz 1 </title>
+</head>
 
+<body>
+  <div id = "mainContent"> 
+    <input type="firstName">
+    <input type="lastName">
+    <input type="emailAddress">
+  </div>
+    
+
+
+
+
+
+
+
+
+
+
+</body>
+  
+  
+  
+  
